--- a/src/style.css
+++ b/src/style.css
@@ -33,10 +33,18 @@ li {
   list-style: none;
 }
 
+footer {
+  display: flex;
+  font-size: 15px;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  text-align: center;
+}
+
 .box {
   display: block;
   max-width: 400px;
   margin: 200px auto;
+  margin-bottom: 50px;
   padding: 50px 1px;
   background-color: #ccf6c8;
   border: 4px solid #fafcc2;
