--- a/src/style.css
+++ b/src/style.css
@@ -13,7 +13,7 @@ h2 {
   text-align: center;
 }
 h3 {
-  font-size: 45px;
+  font-size: 65px;
   text-align: center;
   padding-top: 40px;
   font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
@@ -46,9 +46,9 @@ footer {
   margin: 200px auto;
   margin-bottom: 50px;
   padding: 50px 1px;
-  background-color: #ccf6c8;
+  background-image: url(https://i.pinimg.com/564x/ec/c9/44/ecc944cd36ae94f71525abb17f52220d.jpg);
   border: 4px solid #fafcc2;
-  border-radius: 16px;
+  border-radius: 10px;
 }
 .container {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
